--- a/src/frontend/views/franchise.html
+++ b/src/frontend/views/franchise.html
@@ -41,9 +41,9 @@
         <input type="date" id="datePicker" style="display: none;">
       </div>
       <div class="btnbox">
-        <button class="infobox">FROM: XX-XX-XXXX</button>
+        <button class="infobox"id = "FROM">FROM: XX-XX-XXXX</button>
         <button class="infobox">TO: 31-12-2022</button>
-        <button class="infobox">PERIOD: XXDAYS</button>
+        <button class="infobox"id = "PERIOD">PERIOD: XXDAYS</button>
       </div>
     </div>
 
