--- a/src/frontend/styles/diagram.css
+++ b/src/frontend/styles/diagram.css
@@ -26,8 +26,13 @@
     width: auto;
     display: flex;
   }
-  
-  #revenueContainer {
+
+#pizzaRanking {
+    width: auto;
+    display: flex;
+  }
+
+#revenueContainer {
     margin-top: 20px;
     border: 2px solid #3a3a3a;
     border-radius: 10px;
