Finish of store view

--- a/src/frontend/views/store.html
+++ b/src/frontend/views/store.html
@@ -112,6 +112,7 @@
       <!--End of Stats section-->
       <!--Revenue section-->
       <div class="section-items">
+        <!--section a-->
         <div class="subsection">
           <h1>section a</h1>
           <div class="section-items">
@@ -153,52 +154,104 @@
             </div>
           </div>
         </div>
-        <div class="subsection">
-          <div class="section-items" style="justify-content: space-between;">
-            <div class="btnbox" style="width: 120px;">
-              <button class="btn" id="Last-Month">BACK</button>
-              <button class="btn" id="Last-Quarter">NEXT</button>
-            </div>
-            <div class="btnbox" style="width: 60px;">
-              <!--TODO options TODAY, TOMORROW, MONDAY, TUESDAY, etc.-->
-              <button class="infobox">TODAY</button>
-            </div>
-            <h1 class="centered">section b</h1>
-          </div>
+        <!--End of section a-->
+        <!--section b-->
+        <!--TODO-->
+        <div class="subsection" style="
+        padding: 0px; 
+        border-width: 0px;">
           <div class="section-items">
-            <div class="subsection">
-              <div class="diagram">
-                g
+            <div class="subsection" style="
+              margin-top: 0px;
+              margin-left: 0px;
+              margin-right: 0px;">
+              <div class="section-items" style="justify-content: space-between;">
+                <div class="btnbox" style="width: 120px;">
+                  <button class="btn" id="Last-Month">BACK</button>
+                  <button class="btn" id="Last-Quarter">NEXT</button>
+                </div>
+                <div class="btnbox" style="width: 60px;">
+                  <!--TODO options TODAY, TOMORROW, MONDAY, TUESDAY, etc.-->
+                  <button class="infobox">TODAY</button>
+                </div>
+                <h1 class="centered">section b</h1>
+              </div>
+              <div class="section-items">
+                <div class="subsection">
+                  <div class="diagram">
+                    g
+                  </div>
+                </div>
+              </div>
+              <div class="section-items">
+                <div class="subsection">
+                  <div class="diagram">
+                    h
+                  </div>
+                </div>
+              </div>
+              <div class="section-items">
+                <div class="statBox">
+                  <div id="stat-item"></div>
+                  <h2>Placeholder A</h2>
+                  <p>1234</p>
+                </div>
+                <div class="statBox">
+                  <h2>Order Value B</h2>
+                  <p>1234</p>
+                </div>
+                <div class="statBox">
+                  <h2>PizzaOrder C</h2>
+                  <p>1234</p>
+                </div>
+                <div class="statBox">
+                  <h2>Places D</h2>
+                  <p>1234</p>
+                </div>
               </div>
             </div>
           </div>
           <div class="section-items">
-            <div class="subsection">
-              <div class="diagram">
-                h
+            <div class="subsection" style="
+            margin-bottom: 0px;
+            margin-left: 0px;
+            margin-right: 0px;">
+              <h1>section c</h1>
+              <div class="section-items">
+                <div class="subsection">
+                  <div class="diagram">
+                    i
+                  </div>
+                </div>
+                <div class="subsection">
+                  <div class="diagram">
+                    j
+                  </div>
+                </div>
               </div>
-            </div>
-          </div>
-          <div class="section-items">
-            <div class="statBox">
-              <div id="stat-item"></div>
-              <h2>Placeholder A</h2>
-              <p>1234</p>
-            </div>
-            <div class="statBox">
-              <h2>Order Value B</h2>
-              <p>1234</p>
-            </div>
-            <div class="statBox">
-              <h2>PizzaOrder C</h2>
-              <p>1234</p>
-            </div>
-            <div class="statBox">
-              <h2>Places D</h2>
-              <p>1234</p>
+              <div class="section-items">
+                <div class="statBox">
+                  <div id="stat-item"></div>
+                  <h2>Placeholder A</h2>
+                  <p>1234</p>
+                </div>
+                <div class="statBox">
+                  <h2>Order Value B</h2>
+                  <p>1234</p>
+                </div>
+                <div class="statBox">
+                  <h2>PizzaOrder C</h2>
+                  <p>1234</p>
+                </div>
+                <div class="statBox">
+                  <h2>Places D</h2>
+                  <p>1234</p>
+                </div>
+              </div>
             </div>
           </div>
         </div>
+        <!--End of section b-->
         <!--End of Revenue section-->
         <!-- END OF CONTENT-->
       </div>
