--- a/src/frontend/styles/main.css
+++ b/src/frontend/styles/main.css
@@ -74,6 +74,10 @@ body::-webkit-scrollbar {
 }
 /* Style for the city buttons */
 .city-button {
+  background: none;
+  border-width: 0px;
+  box-shadow: 2px 0 5px rgba(0, 0, 0, 0.3);
+  
   display: block;
   width: 100%;
   padding: 5px; /* Adjust padding inside the button */
@@ -90,7 +94,7 @@ body::-webkit-scrollbar {
 
 /* Style for store list items */
 .store-list li {
-  margin-bottom: px; /* Add margin to separate store links */
+  margin-bottom: 0px; /* Add margin to separate store links */
 }
 
 /* Style for store links */
