abc customer search

--- a/src/frontend/views/individualStore.html
+++ b/src/frontend/views/individualStore.html
@@ -92,6 +92,7 @@
 <div class="section" style ="height: fit-content;">
   <div class="s2Container" style="width: 50%; height: fit-content">
     <h1 data-tooltip="This is the ABC analysis section">ABC Analysis</h1>
+    <input type="text" id="customerSearch" placeholder="Search Customer ID">
     <div id="abcAnalysis_customer_1" style="width: 600px; height: 600px"></div>
   </div>
   <div class="s2Container" style="width: 50%;height: fit-content">
