refactor: Update ABC Analysis of Customers chart title for clarity

--- a/src/frontend/views/individualStore.html
+++ b/src/frontend/views/individualStore.html
@@ -91,16 +91,16 @@
 
 <div class="section" style ="height: fit-content;">
   <div class="s2Container" style="width: 50%; height: fit-content">
-    <h1 data-tooltip="This is the ABC analysis section">ABC Analysis</h1>
+    <h1 data-tooltip="ABC Analysis of Customers sorted by cumulative customer percentage of total revenue">ABC Analysis of Customers sorted by cumulative customer percentage of total revenue</h1>
     <input type="text" id="customerSearch" placeholder="Search Customer ID">
     <div id="abcAnalysis_customer_1" style="width: 600px; height: 600px"></div>
   </div>
   <div class="s2Container" style="width: 50%;height: fit-content">
-    <h1 data-tooltip="This is the ordered pizza sizes section">Ordered Pizza Sizes</h1>
+    <h1 data-tooltip="ABC Analysis of Customers sorted by total Revenue descending">ABC Analysis of Customers sorted by total Revenue descending</h1>
     <div id="abcAnalysis_customer_2" style="width: 600px; height: 600px"></div>
   </div>
   <div class="s2Container" style="width: 50%; height: fit-content">
-    <h1 data-tooltip="This is the ABC analysis section">ABC Analysis</h1>
+    <h1 data-tooltip="ABC Analysis of Pizza by Cumulative Percentage">ABC Analysis of Pizza by Cumulative Percentage</h1>
     <div id="abcAnalysis_pizza_1" style="width: 600px; height: 600px"></div>
   </div>
 </div>
