--- a/src/frontend/styles/diagram.css
+++ b/src/frontend/styles/diagram.css
@@ -33,6 +33,15 @@
     display: flex;
   }
 
+#pizzaRankingContainer {
+  flex: 1;
+  margin-top: 20px;
+  border: 2px solid #3a3a3a;
+  border-radius: 10px;
+  padding: 10px;
+  box-sizing: border-box;
+}
+
 #revenueContainer {
     margin-top: 20px;
     border: 2px solid #3a3a3a;
