--- a/src/frontend/views/franchise.html
+++ b/src/frontend/views/franchise.html
@@ -14,6 +14,7 @@
 
     <script src="/static/echarts/echarts.js"></script>
     <script src="/static/charts/charts.js" type="text/javascript"></script>
+    <script src="/static/charts/generalChart.js" type="module"></script>
 
     <script src="/static/charts/storeCharts.js" type="module"></script>
     <script src="/static/UI/ui.js" type="module"></script>
